On every push or PR, sphinx-apidoc will re-generate the API documentation under docs/development/foundations/code_structure/.
Then sphinx-build will render the docs.

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -47,3 +47,6 @@ jobs:
 
       - name: Run pytest
         run: python -m pytest --cov=flowchem --cov-fail-under=40
+
+      - name: Generate API docs
+        run: sphinx-apidoc -o docs/development/foundations/code_structure src
